# omnia-desktop-clipper

./: .gitignore  README.md  build.py  conftest.py  pyproject.toml  requirements.txt  run.command  run_desktop_clipper.py
omnia_desktop_clipper/: __init__.py  __main__.py  anki.py  app.py  config.py  hotkey.py  mouse_watcher.py  platform.py
omnia_desktop_clipper/capture/: __init__.py  base.py  clipboard.py  context.py  gesture.py  ocr.py
omnia_desktop_clipper/ui/: __init__.py  icon.py  plus_overlay.py  popup.py  region_overlay.py  settings.py  tray.py
tests/: test_anki.py  test_anki_fetch.py  test_clipboard_capture.py  test_config.py  test_context.py  test_gesture.py  test_ocr.py
