# Packaging + tooling metadata for the Omnia Desktop Clipper (a standalone app,
# a sibling of the web clipper — NOT part of the Anki add-on package).
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "omnia-desktop-clipper"
version = "0.1.0"
description = "System-wide desktop clipper that sends selected text to Anki via AnkiConnect (Omnia)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.6",
    "pynput>=1.7",
]

[project.scripts]
omnia-desktop-clipper = "omnia_desktop_clipper.__main__:main"

[tool.setuptools.packages.find]
include = ["omnia_desktop_clipper*"]

# Mirror the repo's style config so the new files match the house standard.
[tool.black]
line-length = 88
target-version = ["py313"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "UP007", "UP045"]

[tool.isort]
profile = "black"
